added schema markup, og and twitter cards to all new pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -6,6 +6,23 @@
     <title>Genny Allison | Front End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Learn more about Genny Allison, a Full Stack Developer blending technical expertise with creativity. With a unique background in design, business, and web development, Genny crafts responsive, user-friendly websites and applications that enhance digital experiences. Explore her journey, skills, and dedication to impactful technology solutions." />
+    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="profile" />
+    <meta property="og:title" content="About Genny Allison | AI-Powered SEO Specialist & Front End Developer" />
+    <meta property="og:description" content="Get to know Genny Allison—an SEO and AI content expert with a passion for web performance, accessibility, and engaging digital experiences. Discover the story behind her career journey." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/about.html" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749314349/genny-about-portrait_qu2vcz.avif" />
+    <meta property="og:image:alt" content="Portrait of Genny Allison representing her blend of creativity and coding in her personal story" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="About Genny Allison | AI SEO Content Creator & Developer" />
+    <meta name="twitter:description" content="Learn about Genny Allison’s background, passion for accessible design, SEO, and AI-powered content strategy. An inside look into the creator behind the portfolio." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749314349/genny-about-portrait_qu2vcz.avif" />
+    <meta name="twitter:image:alt" content="Genny Allison's personal photo, featured on the About Me page" />
+    <meta name="twitter:site" content="@allis78978" />
+
 
     <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">
 
@@ -215,6 +232,69 @@
       }
 
     </style>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "About Genny Allison | AI-Powered SEO Specialist & Front End Developer",
+        "url": "https://gennyallison.netlify.app/pages/about.html",
+        "description": "Learn about Genny Allison, an AI-powered content creator, SEO specialist, and front-end developer. Discover her story, skills, and passion for fast, accessible, high-performance websites.",
+        "about": {
+          "@type": "Person",
+          "name": "Genny Allison",
+          "jobTitle": "AI Content Creator, SEO Specialist, Front End Developer",
+          "url": "https://gennyallison.netlify.app",
+          "image": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_640,h_640/v1749314349/genny-about-portrait_qu2vcz.avif",
+          "sameAs": [
+            "https://github.com/Allison2002",
+            "https://www.linkedin.com/in/genny-allison/",
+            "https://x.com/allis78978",
+            "https://www.instagram.com/allison_stock_inc/"
+          ],
+          "worksFor": {
+            "@type": "Organization",
+            "name": "Allison Stock Inc.",
+            "url": "https://gennyallison.netlify.app"
+          }
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Allison Stock Inc.",
+          "url": "https://gennyallison.netlify.app",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_484,h_210/v1746550266/allisonstock-logo_xgohg9.avif"
+          }
+        },
+        "primaryImageOfPage": {
+          "@type": "ImageObject",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749314349/genny-about-portrait_qu2vcz.avif",
+          "width": 1200,
+          "height": 630,
+          "caption": "Portrait of Genny Allison, AI content and SEO specialist"
+        }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/about"
+          },
+        ]
+      }
+    </script>
   </head>
   <body>
     <nav role="navigation" aria-label="Main navigation">
