--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,6 +6,7 @@
     <title>Genny Allison | Front End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Connect with Genny Allison, front-end developer at Allison Stock Inc., for web design and UI/UX collaborations or inquiries. Reach out via email or phone, or download Genny's resume to learn more about her skills and experience." />
+    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
         <!-- Open Graph Meta Tags -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Contact Genny Allison | Front-End Developer at Allison Stock Inc.">
@@ -112,6 +113,26 @@
           "@type": "WebPage",
           "@id": "https://gennyallison.netlify.app/pages/contact.html"
         }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/contact.html"
+          },
+        ]
       }
     </script>
     <style>
