--- a/pages/resume.html
+++ b/pages/resume.html
@@ -9,6 +9,24 @@
       name="description"
       content="Explore Genny Allison's professional resume, showcasing a blend of technical expertise, creative design, and business acumen. With a strong foundation in Full Stack Development, UI/UX design, and project management, Genny crafts user-focused digital experiences. Discover her career achievements, education, and skills in web development."
     />
+    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
+
+        <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="profile" />
+    <meta property="og:title" content="Genny Allison | Resume | Front End Developer & SEO Content Specialist" />
+    <meta property="og:description" content="Explore Genny Allison’s professional resume, blending web development, UI/UX design, and AI-powered SEO content creation. Discover her career achievements and certifications." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/resume.html" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749313527/girl-painting-resized_hotizy.avif" />
+    <meta property="og:image:alt" content="Resume hero image showcasing Genny Allison’s creative and technical capabilities" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Genny Allison | Resume | Front End Developer & SEO Content Specialist" />
+    <meta name="twitter:description" content="See Genny Allison’s experience as a Front End Developer, AI content creator, and SEO strategist. Review her certifications and digital accomplishments." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749313527/girl-painting-resized_hotizy.avif" />
+    <meta name="twitter:image:alt" content="Genny Allison portfolio resume preview" />
+    <meta name="twitter:site" content="@allis78978" />
+
 
     <link
       class="tab-logo"
@@ -24,6 +42,63 @@
     <noscript><link rel="stylesheet" href="/styles/styles-article.css"></noscript>
 
     <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ProfilePage",
+        "name": "Genny Allison | Front End Developer & AI Content Specialist",
+        "url": "https://gennyallison.netlify.app/pages/resume.html",
+        "description": "Explore Genny Allison's professional resume, showcasing Full Stack Development, UI/UX design, SEO content, and AI-powered web solutions.",
+        "mainEntity": {
+          "@type": "Person",
+          "name": "Genny Allison",
+          "alternateName": "Allison Stock Inc.",
+          "url": "https://gennyallison.netlify.app",
+          "image": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif",
+          "jobTitle": "Front End Developer, AI Content Creator, SEO Specialist",
+          "sameAs": [
+            "https://www.linkedin.com/in/genny-allison/",
+            "https://github.com/Allison2002",
+            "https://www.instagram.com/allison_stock_inc/",
+            "https://x.com/allis78978"
+          ],
+          "worksFor": {
+            "@type": "Organization",
+            "name": "Allison Stock Inc.",
+            "url": "https://gennyallison.netlify.app",
+            "logo": {
+              "@type": "ImageObject",
+              "url": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            }
+          }
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Allison Stock Inc.",
+          "url": "https://gennyallison.netlify.app"
+        }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/resume"
+          },
+        ]
+      }
+    </script>
 
     <style>
       picture {
