--- a/pages/skills.html
+++ b/pages/skills.html
@@ -7,6 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover Genny Allison's technical and creative skills, from responsive web design and front-end development to UI/UX, graphic design, and coding languages. This skills showcase reflects a blend of artistic imagination and technical expertise, supporting a seamless, user-focused digital experience." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Genny Allison | Skills Portfolio | Front End Developer & AI Content Specialist" />
+    <meta property="og:description" content="Explore Genny Allison's skills in web development, SEO, AI content, responsive design, and UI/UX. This skills portfolio highlights a blend of technical expertise and creative tools like MidJourney, Figma, and Photoshop." />
+    <meta property="og:url" content="https://gennyallison.netlify.app/pages/skills.html" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749311652/girl-learning_uylv0k.avif" />
+    <meta property="og:image:alt" content="Skills hero image representing Genny Allison’s technical and creative capabilities in AI content, design, and front-end development." />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Genny Allison | Skills Portfolio | Front End Developer & AI Content Specialist" />
+    <meta name="twitter:description" content="A showcase of Genny Allison’s technical skills and AI expertise across web development, SEO, content generation, and responsive UI/UX design." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1749311652/girl-learning_uylv0k.avif" />
+    <meta name="twitter:image:alt" content="Skills grid banner with AI and design tools featured" />
+    <meta name="twitter:site" content="@allis78978" />
+
         
         <!-- Desktop ≥ 941px -->
     <link
@@ -258,6 +275,69 @@
       }
 
     </style>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Genny Allison | Skills Portfolio",
+        "url": "https://gennyallison.netlify.app/pages/skills.html",
+        "description": "Discover Genny Allison's technical and creative skills in web development, SEO, AI content, image generation, UI/UX design, and responsive development. This portfolio highlights a blend of coding languages, design tools, and AI technologies.",
+        "about": {
+          "@type": "Person",
+          "name": "Genny Allison",
+          "url": "https://gennyallison.netlify.app",
+          "image": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif",
+          "jobTitle": "Front End Developer | AI Content Creator | SEO Specialist",
+          "worksFor": {
+            "@type": "Organization",
+            "name": "Allison Stock Inc.",
+            "url": "https://gennyallison.netlify.app"
+          },
+          "sameAs": [
+            "https://www.linkedin.com/in/genny-allison/",
+            "https://github.com/Allison2002",
+            "https://www.instagram.com/allison_stock_inc/",
+            "https://x.com/allis78978"
+          ]
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Allison Stock Inc.",
+          "url": "https://gennyallison.netlify.app",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_484,h_210,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+          }
+        },
+        "primaryImageOfPage": {
+          "@type": "ImageObject",
+          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_916/v1749311652/girl-learning_uylv0k.avif",
+          "width": 1458,
+          "height": 916,
+          "caption": "Genny Allison’s interactive skills section showcasing tools like MidJourney, Figma, HTML, CSS, and JavaScript"
+        }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://gennyallison.netlify.app/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "My Work",
+            "item": "https://gennyallison.netlify.app/pages/skills"
+          },
+        ]
+      }
+    </script>
   </head>
   <body>
     <nav role="navigation" aria-label="Main navigation">
