--- a/pages/collections.html
+++ b/pages/collections.html
@@ -10,11 +10,22 @@
       content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations."
     />
 
-        <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
+    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Genny Allison | My Work | AI-Powered SEO Projects & Web Development Portfolio" />
+    <meta property="og:description" content="Explore Genny Allison’s portfolio showcasing AI-driven content, Core Web Vitals optimization, and accessible, high-performing web design. Each project blends creativity, code, and strategy." />
+    <meta property="og:url" content="https://tech-trends-blog.netlify.app/pages/collections.html" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1743092340/collections_ky7hd1.avif" />
+    <meta property="og:image:alt" content="A woman coding on a laptop representing innovation and creativity in Genny Allison’s digital portfolio" />
 
-
-    <link rel="preload" href="/assets/fonts/georgia.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" href="/assets/fonts/SegoeUI.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Genny Allison | Web Developer Portfolio | SEO, AI Content & UI/UX Projects" />
+    <meta name="twitter:description" content="Browse Genny Allison’s digital creations—from AI blogs to JavaScript animations. Designed for speed, SEO, accessibility, and beautiful user experience." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_630/v1743092340/collections_ky7hd1.avif" />
+    <meta name="twitter:image:alt" content="Hero image for the My Work page in Genny Allison’s portfolio" />
+    <meta name="twitter:site" content="@allis78978" />
 
     <!-- ✅ Desktop ≥ 941px -->
     <link
