--- a/pages/project5/project5-the-design.html
+++ b/pages/project5/project5-the-design.html
@@ -14,6 +14,15 @@
     <meta property="og:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1749258015/parent-tech-hero-desktop_yxscgx.avif" />
     <meta property="og:image:alt" content="Hero image of Parent Tech Support redesign project showing responsive layout and WordPress integration" />
     <meta property="og:site_name" content="Genny Allison Portfolio" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Parent Tech Support Website Redesign | WordPress & Elementor | Genny Allison" />
+    <meta name="twitter:description" content="Explore Genny Allison’s UI/UX-focused WordPress redesign of Parent Tech Support, featuring improved layouts, mobile responsiveness, and a polished article & video blog." />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dnptzisuf/image/upload/v1749258015/parent-tech-hero-desktop_yxscgx.avif" />
+    <meta name="twitter:image:alt" content="Screenshot of the redesigned Parent Tech Support website showing clean UI with WordPress & Elementor" />
+    <meta name="twitter:site" content="@allis78978" />
+    <meta name="twitter:creator" content="@allis78978" />
+
     
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 
