updated inline styles

--- a/pages/collections.html
+++ b/pages/collections.html
@@ -191,7 +191,7 @@
         box-sizing: border-box;
         padding: 0.5rem;
         contain: layout paint style;
-        aspect-ratio: 1024 / 283;
+        aspect-ratio: 1904 / 502;
       }
       
 
@@ -204,10 +204,11 @@
         background-color: #000;
         box-sizing: border-box;
         height: auto;
+        aspect-ratio: 1458 / 948;
       }
 
       .canvas-skills-grid img {
-        object-position: center center;
+        object-position: center;
         border-top: 1em solid #000;
         border-left: 1em solid #000;
         border-right: 0.5em solid #000;
@@ -248,6 +249,7 @@
         text-align: center;
         line-height: 1.4;
         font-display: swap;
+        height: auto;
         margin: 0;
       }
 
@@ -318,12 +320,14 @@
       @media (max-width: 480px) {
         .canvas-skills-grid {
           padding: 0.25rem;
+          height: 200px;
+          width: 480px;  
         }
 
         .canvas-skills-grid img {
-          border-width: 0.2em;
+          border-width: 0.5em;
           object-fit: cover;
-          aspect-ratio: 164 / 100;
+          min-height: 168px;
           object-position: center top;
 
         }
@@ -332,27 +336,29 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
-          min-height: 100px;
+          min-height: 168px;
           border-width: 0.5em;
-          width: 50%;
-          max-width: 50vw;
-          padding-right: 0.7em;
+          width: 100%;
+          max-width: 480px;
+          height: auto;
+          padding-right: 0;
+          margin: 0 auto;
         }
 
         .canvas-skills-title h1 {
-          font-size: 1.4rem;
-          height: 3rem;
+          font-size: 1.1rem;
+          height: auto;
           width: 100%;
-          line-height: 1.5;
+          line-height: 1.6;
           margin: 0 auto;
           padding: 0;
         }
 
         .canvas-skills-title h2 {
-          font-size: 1.3rem;
-          height: 3rem;
+          font-size: 1rem;
+          height: auto;
           width: 100%;
-          line-height: 1;
+          line-height: 1.5;
           margin: 0 auto;
           padding: 0;
         }
