--- a/pages/project4/project4-the-design.html
+++ b/pages/project4/project4-the-design.html
@@ -120,6 +120,7 @@
         background-color: #000;
         box-sizing: border-box;
         height: auto;
+        aspect-ratio: 1458 / 948;
       }
 
       .canvas-skills-grid img {
@@ -164,6 +165,7 @@
         text-align: center;
         line-height: 1.4;
         font-display: swap;
+        height: auto;
         margin: 0;
       }
 
@@ -216,7 +218,7 @@
         }
 
         .canvas-skills-title {
-          min-height: 150px;
+          min-height: 180px;
           padding: 0.5rem;
           border-width: 0.5em;
         }
@@ -234,11 +236,14 @@
       @media (max-width: 480px) {
         .canvas-skills-grid {
           padding: 0.25rem;
+          height: 200px;
+          width: 480px;  
         }
 
         .canvas-skills-grid img {
           border-width: 0.5em;
           object-fit: cover;
+          min-height: 168px;
           object-position: center top;
 
         }
@@ -247,27 +252,29 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
-          min-height: 80px;
+          min-height: 168px;
           border-width: 0.5em;
-          width: 50%;
-          max-width: 50vw;
-          padding-right: 0.7em;
+          width: 100%;
+          max-width: 480px;
+          height: auto;
+          padding-right: 0;
+          margin: 0 auto;
         }
 
         .canvas-skills-title h1 {
-          font-size: 1.4rem;
-          height: 3rem;
+          font-size: 1.1rem;
+          height: auto;
           width: 100%;
-          line-height: 1.5;
+          line-height: 1.6;
           margin: 0 auto;
           padding: 0;
         }
 
         .canvas-skills-title h2 {
-          font-size: 1.3rem;
-          height: 3rem;
+          font-size: 1rem;
+          height: auto;
           width: 100%;
-          line-height: 1;
+          line-height: 1.5;
           margin: 0 auto;
           padding: 0;
         }
@@ -668,7 +675,6 @@
         <li><a href="/pages/project3/project3-intro.html#the-menu">the "menu"</a></li>
         <li><a href="https://github.com/Allison2002/sports_tube_community.git">the code</a></li>
         <li><a href="/pages/project3/project3-the-grade.html">the grade</a></li>
-        <li><a href="/pages/project3/project3-the-design.html">the design</a></li>
         <li><a href="/pages/project3/project3-the-casestudy.html">the casestudy</a></li>
         <li><a href="#author-bio">contact me</a></li>
       </ul>
