--- a/pages/project2/project2-the-casestudy.html
+++ b/pages/project2/project2-the-casestudy.html
@@ -206,7 +206,7 @@
         background-color: #000;
         box-sizing: border-box;
         height: auto;
-        aspect-ratio: 1904 / 502;
+        aspect-ratio: 1458 / 948;
       }
 
       .canvas-skills-grid img {
@@ -251,6 +251,7 @@
         text-align: center;
         line-height: 1.4;
         font-display: swap;
+        height: auto;
         margin: 0;
       }
 
@@ -342,23 +343,24 @@
           width: 100%;
           max-width: 480px;
           height: auto;
-          padding-right: 0.7em;
+          padding-right: 0;
+          margin: 0 auto;
         }
 
         .canvas-skills-title h1 {
-          font-size: 1.4rem;
-          height: 3rem;
+          font-size: 1.1rem;
+          height: auto;
           width: 100%;
-          line-height: 1.5;
+          line-height: 1.6;
           margin: 0 auto;
           padding: 0;
         }
 
         .canvas-skills-title h2 {
-          font-size: 1.3rem;
-          height: 3rem;
+          font-size: 1rem;
+          height: auto;
           width: 100%;
-          line-height: 1;
+          line-height: 1.5;
           margin: 0 auto;
           padding: 0;
         }
