--- a/pages/project4/project4-the-grade.html
+++ b/pages/project4/project4-the-grade.html
@@ -118,6 +118,7 @@
         background-color: #000;
         box-sizing: border-box;
         height: auto;
+        aspect-ratio: 1458 / 948;
       }
 
       .canvas-skills-grid img {
@@ -162,6 +163,7 @@
         text-align: center;
         line-height: 1.4;
         font-display: swap;
+        height: auto;
         margin: 0;
       }
 
@@ -232,12 +234,14 @@
       @media (max-width: 480px) {
         .canvas-skills-grid {
           padding: 0.25rem;
+          height: 200px;
+          width: 480px;  
         }
 
         .canvas-skills-grid img {
           border-width: 0.5em;
           object-fit: cover;
-          aspect-ratio: 164 / 100;
+          min-height: 168px;
           object-position: center top;
 
         }
@@ -246,27 +250,29 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
-          min-height: 100px;
+          min-height: 168px;
           border-width: 0.5em;
-          width: 50%;
-          max-width: 50vw;
-          padding-right: 0.7em;
+          width: 100%;
+          max-width: 480px;
+          height: auto;
+          padding-right: 0;
+          margin: 0 auto;
         }
 
         .canvas-skills-title h1 {
-          font-size: 1.4rem;
-          height: 3rem;
+          font-size: 1.1rem;
+          height: auto;
           width: 100%;
-          line-height: 1.5;
+          line-height: 1.6;
           margin: 0 auto;
           padding: 0;
         }
 
         .canvas-skills-title h2 {
-          font-size: 1.3rem;
-          height: 3rem;
+          font-size: 1rem;
+          height: auto;
           width: 100%;
-          line-height: 1;
+          line-height: 1.5;
           margin: 0 auto;
           padding: 0;
         }
@@ -683,7 +689,6 @@
         <li><a href="/pages/collections.html">the projects</a></li>
         <li><a href="/pages/project3/project3-intro.html#the-menu">the "menu"</a></li>
         <li><a href="https://github.com/Allison2002/sports_tube_community.git">the code</a></li>
-        <li><a href="/pages/project3/project3-the-grade.html">the grade</a></li>
         <li><a href="/pages/project3/project3-the-design.html">the design</a></li>
         <li><a href="/pages/project3/project3-the-casestudy.html">the casestudy</a></li>
         <li><a href="#author-bio">contact me</a></li>
