--- a/pages/project6/project6-the-design.html
+++ b/pages/project6/project6-the-design.html
@@ -118,6 +118,7 @@
         background-color: #000;
         box-sizing: border-box;
         height: auto;
+        aspect-ratio: 1458 / 948;
       }
 
       .canvas-skills-grid img {
@@ -162,6 +163,7 @@
         text-align: center;
         line-height: 1.4;
         font-display: swap;
+        height: auto;
         margin: 0;
       }
 
@@ -214,7 +216,7 @@
         }
 
         .canvas-skills-title {
-          min-height: 150px;
+          min-height: 180px;
           padding: 0.5rem;
           border-width: 0.5em;
         }
@@ -232,13 +234,15 @@
       @media (max-width: 480px) {
         .canvas-skills-grid {
           padding: 0.25rem;
-          min-height: 125px;
+          height: 200px;
+          width: 480px;  
         }
 
         .canvas-skills-grid img {
-          border-width: 0.2em;
+          border-width: 0.5em;
           object-fit: cover;
-          object-position: center center;
+          min-height: 168px;
+          object-position: center top;
 
         }
 
@@ -246,27 +250,29 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
-          min-height: 80px;
+          min-height: 168px;
           border-width: 0.5em;
-          width: 50%;
-          max-width: 50vw;
-          padding-right: 0.7em;
+          width: 100%;
+          max-width: 480px;
+          height: auto;
+          padding-right: 0;
+          margin: 0 auto;
         }
 
         .canvas-skills-title h1 {
-          font-size: 1.4rem;
-          height: 3rem;
+          font-size: 1.1rem;
+          height: auto;
           width: 100%;
-          line-height: 1.5;
+          line-height: 1.6;
           margin: 0 auto;
           padding: 0;
         }
 
         .canvas-skills-title h2 {
-          font-size: 1.3rem;
-          height: 3rem;
+          font-size: 1rem;
+          height: auto;
           width: 100%;
-          line-height: 1;
+          line-height: 1.5;
           margin: 0 auto;
           padding: 0;
         }
